feat: connection to the database established and configuration

--- a/src/app/database/Dockerfile
+++ b/src/app/database/Dockerfile
@@ -4,4 +4,6 @@ ENV POSTGRES_USER=gorm
 ENV POSTGRES_PASSWORD=admin
 ENV POSTGRES_DB=database
 
+COPY init-db.sql /docker-entrypoint-initdb.d/
+
 EXPOSE 5432
