--- a/example.env
+++ b/example.env
@@ -1,8 +1,7 @@
-DATASOURCE_HOST=database
-DATASOURCE_PORT_LOCAL=5434 # Port to be used to connect locally to database container
-DATASOURCE_PORT=5432 # Port to be used to connect containers to database container in docker network
-DATASOURCE_DB=dialosoft
-DATASOURCE_USERNAME=dialosoft_user
-DATASOURCE_PASSWORD=admin
-JWT_SECRET_KEY=dialosoft-key-123
-REDIS_PORT_LOCAL=6379
+HOST=localhost
+USER=gorm
+PASSWORD=admin
+DATABASE=database
+PORT=5432
+SSLMODE=false
+JWTKEY="YOURSECRET"
